[package]
name = "codex-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "time"] }
notify-rust = "4"

[profile.release]
strip = true
lto = true
opt-level = "z"
